cmake_minimum_required(VERSION 3.20)
project(pspedit)

if(PSP)
	include(cmake/add_libpspexploit.cmake)
	add_libpspexploit("external/libpspexploit" "${CMAKE_CURRENT_BINARY_DIR}/external/libpspexploit")
	add_subdirectory("source/common" "${CMAKE_BINARY_DIR}/common")
	add_subdirectory("source/runtime" "${CMAKE_BINARY_DIR}/runtime")
else()
	include(cmake/add_libdwarf.cmake)
	include(cmake/add_libusb.cmake)
	include(cmake/add_glfw.cmake)
	include(cmake/add_imgui.cmake)
	include(cmake/add_nfd.cmake)
	include(cmake/add_stb.cmake)
	add_libdwarf("external/libdwarf" "${CMAKE_CURRENT_BINARY_DIR}/external/libdwarf")
	add_libusb("external/libusb" "${CMAKE_CURRENT_BINARY_DIR}/external/libusb")
	add_glfw("external/glfw" "${CMAKE_CURRENT_BINARY_DIR}/external/glfw")
	add_imgui("external/imgui" "${CMAKE_CURRENT_BINARY_DIR}/external/imgui")
	add_nfd("external/nfd" "${CMAKE_CURRENT_BINARY_DIR}/external/nfd")
	add_stb("external/stb" "${CMAKE_CURRENT_BINARY_DIR}/external/stb")
	add_library(common_headers INTERFACE)
	add_library(runtime_headers INTERFACE)
	target_include_directories(common_headers INTERFACE "source/common")
	target_include_directories(runtime_headers INTERFACE "source/runtime")
	add_subdirectory("source/editor" "${CMAKE_BINARY_DIR}/editor")
	set_target_properties(pspedit PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
	target_sources(pspedit PRIVATE ${runtime_zip_cpp})
endif()
